# CapManAI

./: .gitignore  README.md  SKILL.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_baseline.py  002_add_learning_objective_progress.py  003_add_leaderboard_snapshots.py  004_add_document_chunks.py  005_add_challenges.py  006_add_peer_reviews.py  007_upgrade_rag_pgvector.py  008_add_user_name.py  009_add_announcements_and_messages.py  010_add_image_url_to_messages.py  011_clear_384dim_embeddings.py  82b61bbb3c0f_make_grades_response_id_nullable.py
backend/src/api/: assistant_routes.py  routes.py  routes_content.py  routes_gamification.py  routes_lessons.py  routes_messaging.py  routes_scenarios.py  routes_users.py  schemas.py
backend/src/assistant/: __init__.py  context.py  llm.py  service.py
backend/src/auth/: dependencies.py  firebase.py  jwt.py  passwords.py  routes.py  schemas.py
backend/src/challenges/: __init__.py  matchmaker.py  routes.py  service.py
backend/src/core/: config.py
backend/src/db/: database.py  models.py
backend/src/gamification/: leaderboard.py  ranking.py  xp.py
backend/src/grading/: agent.py  rubric.py
backend/src/lessons/: __init__.py  _types.py  persistence.py  repository.py  service.py
backend/src/lessons/seeds/: catalog.json
backend/src/mtss/: classifier.py  objectives.py  repository.py
backend/src/peer_review/: __init__.py  assigner.py  routes.py  service.py
backend/src/rag/: __init__.py  embeddings.py  ingest.py  retriever.py  seed.py
backend/src/rag/documents/: 01_market_fundamentals.txt  02_stocks_and_etfs.txt  03_options_fundamentals.txt  04_options_greeks.txt  05_risk_management.txt  06_price_action.txt  07_options_chain_analysis.txt  10_market_regimes.txt  (+13 more)
backend/src/realtime/: events.py  manager.py  routes.py
backend/src/scenario_gen/: diversity.py  generator.py  prompts.py
backend/tests/: conftest.py  test_announcements_messages.py  test_auth.py  test_badges.py  test_challenges.py  test_csv_export.py  test_diversity.py  test_dynamic_leaderboard.py  test_grading.py  test_health.py  test_leaderboard.py  test_lessons.py  test_mtss.py  test_mtss_granular.py  test_peer_review.py  test_peer_review_auto.py  test_prerequisites.py  test_rag.py  test_scenario_gen.py  test_skills.py  test_websocket.py  test_xp.py
(+96 files in other folders)
