[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.0",
    "sqlalchemy>=2.0.48",
    "numpy>=1.26.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
